tests/snapshots/align_imports/relative_imports.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/align_imports/relative_imports.input.py
---
align-imports@241..242
align-imports@271..272
align-imports@300..301
