tests/snapshots/align_imports/relative_imports.input.py.snap
---
source: tests/integration.rs
expression: "&output"
input_file: tests/fixtures/align_imports/relative_imports.input.py
---
"""
Relative `from`-imports with explicit dot prefixes participate in
the same alignment as absolute ones. The `import` keyword aligns
across the run regardless of whether the module path leads with
dots, named segments, or both.
"""

from .         import siblings
from .helpers  import normalize
from ..core    import register
from ...common import constants
