tests/snapshots/align_imports/shift_limit_drop.diagnostics.snap
---
source: tests/diagnostics.rs
assertion_line: 45
expression: render(&diagnostics)
input_file: tests/fixtures/align_imports/shift_limit_drop.input.py
---
align-imports@253..254
align-imports@276..277
align-imports@295..296
align-imports@385..386
