tests/snapshots/align_imports/shift_limit_skip.diagnostics.snap
---
source: tests/diagnostics.rs
assertion_line: 45
expression: render(&diagnostics)
input_file: tests/fixtures/align_imports/shift_limit_skip.input.py
---

