tests/snapshots/align_imports/single_import.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/align_imports/single_import.input.py
---

